<resources>
    <string name="app_name">FileBuddyMobileClient</string>
    <string name="app_title">File Buddy</string>
    <string name="email">Enter your E-Mail</string>
    <string name="password">Enter your password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="newMac">Detected MAC</string>
    <string name="foundedMac">XX-XX-XX-XX</string>
    <string name="name">Name</string>
    <string name="addMac">Add now!</string>
    <string name="line_1">Line 1</string>
    <string name="line_2">Line 2</string>
    <string name="search">search</string>
</resources>
